<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradien_bg"
    android:orientation="vertical"

    tools:context=".SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="60sp"
        android:gravity="center"
        android:textColor="@color/main_bg"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="30sp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_page"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/enter_name_box"
            android:layout_marginTop="20sp"


            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_bg"
                android:textSize="60sp"
                android:text="@string/X"
               android:layout_marginEnd="25dp"
                />
            <TextView

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:textSize="30sp"
                android:layout_gravity="center"
                android:background="@color/box_color"
            android:text="@string/player_1"
              android:textColor="@color/bg_color"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
               />
        </LinearLayout>


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/enter_name_box"
            android:layout_marginTop="20sp"


            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="69dp"
                android:layout_height="wrap_content"
android:layout_marginEnd="20dp"
                android:text="@string/O"
                android:textColor="@color/main_bg"
                android:textSize="65sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@color/box_color"
                android:text="@string/player_2"
                android:textColor="@color/bg_color"
                android:textSize="30sp"

                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/startBtn"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:background="@drawable/start_button"
            android:layout_marginRight="30dp"
            android:textSize="30sp"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>




</LinearLayout>