<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@drawable/gradien_bg"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="@string/turn"
        android:textSize="50sp"
       android:textStyle="bold"
        android:textColor="@color/main_bg"
        android:fontFamily="sans-serif"
      android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:id="@+id/turnX"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/X"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="60sp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/box"
            />

        <TextView
            android:id="@+id/turn0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/O"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="60sp"
            android:background="@drawable/box"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="15dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/main_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:background="@drawable/box"



                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn2"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:background="@drawable/box"


                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn3"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:background="@drawable/box"
               />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn4"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:background="@drawable/box"
               />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn5"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:background="@drawable/box"
                 />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn6"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:background="@drawable/box"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn7"
                android:gravity="center"
                android:textSize="60sp"
               android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:background="@drawable/box"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn8"
                android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:background="@drawable/box"
               />
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn9"
               android:gravity="center"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:background="@drawable/box"
               />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>